添加条目监听

--- a/app/src/main/res/layout/rv_item_pic.xml
+++ b/app/src/main/res/layout/rv_item_pic.xml
@@ -3,9 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:orientation="horizontal"
     android:background="#d6a5a5"
+    android:id="@+id/ll_pic_layout"
     android:layout_height="90dp">
 
     <ImageView
+        android:id="@+id/iv"
         android:layout_margin="20dp"
         android:layout_gravity="center_vertical"
         android:layout_width="80dp"
